--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -59,6 +59,7 @@ body {
   .left {
     display: flex;
     align-items: center;
+    text-decoration: none;
 
     .logo {
       width: 3em;
@@ -234,6 +235,7 @@ body {
     flex-direction: column;
     align-items: center;
 
+    // Ref: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_overflow/CSS_carousels
     .carousel {
       width: 85vw;
       height: 8em;
